--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,6 @@
   </app-modal>
 
   <button class='rounded-full bg-red-700 text-white fixed right-5 bottom-5 py-2 px-4'
-          (click)='modalService.open()'>+
+          (click)='modalService.open()'>Добавить одежду
   </button>
 </div>
