--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -16,12 +16,11 @@
 
 
   <div *ngIf='details'>
-    <div class='text-blue-600 text-xl text-bold'>
-      <p>{{product.description}}</p>
-      <p>{{product.category}}</p>
-    </div>
-    <p>Rate: <span [ngStyle]='{fontWeight: "bold"}'>
+    <div class='text-bold flex-col pt-2'>
+      <p><strong>Description of product</strong>: {{product.description}}</p>
+      <p><strong>Category of product</strong>: {{product.category}}</p>
+      <p><strong>Rate of product</strong>: <span [ngStyle]='{fontWeight: "bold"}'>
       {{product.rating.rate}}</span></p>
-
+    </div>
   </div>
 </div>
